Updated logic to no longer mark `CarePlans` as `CANCELLED` if they are already `COMPLETED`.